# waldo-spells

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  conftest.py  logging_utils.py  pyproject.toml  run_harness.sh  test_conftest_env.py  test_extension_latency.py  test_generate_c4200m_pairs.py
extension/: background.js  content.js  edge_worker.js  edge_worker.test.js  manifest.json  popup.html  popup.js  smart_worker.js  test_context_menu_suggestions.js  test_edge.js
harness/: corpus.jsonl  corpus.py  metrics.py  onnx_backend.py  report.py  runner.py  test_align_and_metrics.py  test_cola_grammar.py  test_corpus_sources.py  test_onnx_backend.py  test_report_env.py  test_report_run_dir_creation.py  test_report_tier_summary.py  test_report_write_summary.py  test_skip_tiers.py  test_smoke.py  test_tier_unavailable.py
harness/results/: analysis.md  results.csv  summary.md
harness/sources/: align.py  kaggle_gec.py
research/: capability_matrix.md  context_detection.md  ct2-smart-tier.md  t5_gguf_status.md
research_cycles/: cycle_14_2026-05-25-0942.md  cycle_17_2026-05-29-1429.md  cycle_1_2026-04-25-0430.md  cycle_2_2026-04-25-0530.md  cycle_3_2026-04-25-0700.md  cycle_4_2026-04-25-0800.md  cycle_5_2026-04-25-0900.md  cycle_6_2026-04-25-1000.md  cycle_7_2026-04-25-1100.md  cycle_8_2026-04-25-1200.md
scripts/: export_cola_onnx.py  generate_c4200m_pairs.py
wrapper/: README.md  __init__.py  llama_backend.py  main.py  nuspell_backend.py  protocol.py  requirements.txt  server.py  t5_backend.py  t5_converter.py  tier_router.py
wrapper/tests/: __init__.py  (+8 more)
(+3 files in other folders)
