[project]
name = "waldospells"
version = "0.1.1"
requires-python = ">=3.11"
dependencies = [
    "ctranslate2>=4.7",
    "huggingface-hub>=1.12",
    "numpy>=2.0",
    "onnxruntime>=1.26.0",
    "pyenchant>=3.3",
    "pyyaml>=6.0",
    "requests>=2.33",
    "tokenizers>=0.22",
    "transformers>=5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0",
    "python-dotenv>=1.0",
]

[tool.pytest.ini_options]
pythonpath = "."
markers = [
    "slow: corpus harness runs that load models or large datasets",
]
